--- a/main.html
+++ b/main.html
@@ -42,6 +42,7 @@
     <script src="THEME/js/admin.js"></script>
     <script src="THEME/js/demo.js"></script>
     <script src="THEME/js/custom.js"></script>
+    <!-- <script src="menu.js"></script> -->
 
     <script>
         var lstBooks = [];
