--- a/masterpage.html
+++ b/masterpage.html
@@ -1,3 +1,5 @@
+<script src="menu.js"></script>
+
 <div class="page-loader-wrapper">
     <div class="loader">
         <div class="preloader">
@@ -26,7 +28,7 @@
     </div>
 </div>
 
-<nav class="navbar">
+<nav class="navbar"  style="margin-top:30px">
     <div class="container-fluid">
         <div class="navbar-header">
             <a href="#" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse" aria-expanded="false"></a>
@@ -35,14 +37,14 @@
         </div>
         <div class="collapse navbar-collapse" id="navbar-collapse">
             <ul class="nav navbar-nav">
-                <li>
+                <!-- <li>
                     <a href="#" style="font-size: 24px; font-weight: bolder;">BYGOZ E-LEARNING PRIVATE LIMITED</a>
-                </li>
-                <li>
+                </li> -->
+                <!-- <li>
                     <a href="main.html" data-close="true">
                         <i class="material-icons">home</i>
                     </a>
-                </li>
+                </li> -->
             </ul>
             <ul class="nav navbar-nav navbar-right">
                 <li>
@@ -56,8 +58,8 @@
     </div>
 </nav>
 
-<section>
-    <aside id="leftsidebar" class="sidebar">
+<section >
+    <aside id="leftsidebar" class="sidebar" style="margin-top:30px">
         <div class="menu">
             <ul class="list">
                 <li>
@@ -141,7 +143,7 @@
                 </li>
 
                 <li>
-                    <a href="#" class="lnkSellWithUs">
+                    <a href="sellwithus.html" class="lnkSellWithUs">
                         <i class="material-icons">shopping_cart</i>
                         <span>SELL WITH US</span>
                     </a>
