--- a/masterpage.html
+++ b/masterpage.html
@@ -28,7 +28,7 @@
     </div>
 </div>
 
-<nav class="navbar"  style="margin-top:30px">
+<nav class="navbar" style="margin-top:30px">
     <div class="container-fluid">
         <div class="navbar-header">
             <a href="#" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse" aria-expanded="false"></a>
@@ -48,9 +48,9 @@
             </ul>
             <ul class="nav navbar-nav navbar-right">
                 <li>
-                    <a href="login.html">
+                    <a href="#" class="lnkLogin">
                         <i class="material-icons">shopping_cart</i>
-                        <span>CART</span>
+                        <span>Cart</span>
                     </a>
                 </li>
             </ul>
@@ -58,7 +58,7 @@
     </div>
 </nav>
 
-<section >
+<section>
     <aside id="leftsidebar" class="sidebar" style="margin-top:30px">
         <div class="menu">
             <ul class="list">
@@ -95,7 +95,7 @@
                 </li>
 
                 <li>
-                    <a href="#" class="lnkCart">
+                    <a href="cartlist.html" class="lnkCart">
                         <i class="material-icons">add_shopping_cart</i>
                         <span>CART</span>
                     </a>
@@ -127,7 +127,7 @@
                 </li>
 
                 <li>
-                    <a href="#" class="lnkMyProfile">
+                    <a href="myprofile.html" class="lnkMyProfile">
                         <i class="material-icons">account_box</i>
                         <span>MY PROFILE</span>
                     </a>
@@ -135,7 +135,7 @@
                 </li>
 
                 <li>
-                    <a href="#" class="lnkChangePassword">
+                    <a href="changepassword.html" class="lnkChangePassword">
                         <i class="material-icons">settings_applications</i>
                         <span>CHANGE PASSWORD</span>
                     </a>
