--- a/login.html
+++ b/login.html
@@ -16,54 +16,29 @@
 </head>
 
 <body class="theme-light-blue">
-    <div class="page-loader-wrapper">
-        <div class="loader">
-            <div class="preloader">
-                <div class="spinner-layer pl-light-blue">
-                    <div class="circle-clipper left">
-                        <div class="circle"></div>
-                    </div>
-                    <div class="circle-clipper right">
-                        <div class="circle"></div>
-                    </div>
-                </div>
-            </div>
-            <p>Please wait...</p>
-        </div>
-    </div>
-    <div class="overlay"></div>
-    <div class="search-bar">
-        <div class="search-icon">
-            <i class="material-icons">search</i>
-        </div>
-        <input type="text" placeholder="Search Titles & Authors">
-        <div class="close-search">
-            <i class="material-icons">close</i>
-        </div>
-    </div>
-    <nav class="navbar">
+    <nav class="navbar" style="margin-top: 30px;">
         <div class="container-fluid">
             <div class="navbar-header">
-                <a href="javascript:void(0);" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse" aria-expanded="false"></a>
-                <a href="javascript:void(0);" class="bars"></a>
-                <a href="main.html" class="lnkHome"><img src="logo.png" alt="Logo" /></a>
+                <a href="#" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse" aria-expanded="false"></a>
+                <a href="#" class="bars"></a>
+                <a href="main.html"><img src="logo.png" alt="Logo" /></a>
             </div>
             <div class="collapse navbar-collapse" id="navbar-collapse">
                 <ul class="nav navbar-nav">
-                    <li>
+                    <!-- <li>
                         <a href="#" style="font-size: 24px; font-weight: bolder;">BYGOZ E-LEARNING PRIVATE LIMITED</a>
-                    </li>
+                    </li> -->
                     <li>
-                        <a href="main.html" class="lnkHome" data-close="true">
+                        <a href="main.html" data-close="true">
                             <i class="material-icons">home</i>
                         </a>
                     </li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a href="login.html" class="lnkLogin">
+                        <a href="#">
                             <i class="material-icons">shopping_cart</i>
-                            <span>Bygoz Store</span>
+                            <span>Cart</span>
                         </a>
                     </li>
                 </ul>
@@ -74,7 +49,7 @@
         <div class="container-fluid">
 
             <div class="row clearfix">
-                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                <div class="col-md-12">
                     <div class="card">
                         <div class="body">
                             <div class="row">
@@ -116,14 +91,17 @@
     <script src="THEME/js/admin.js"></script>
     <script src="THEME/js/demo.js"></script>
     <script src="THEME/js/custom.js"></script>
+    <script src="menu.js"></script>
     <script>
-        $(document).ready(function() {
-            var getMacAddress = '';
+        var getMacAddress = '';
+
+        $(function() {
             if (window.localStorage.getItem("getMacAddress") != null) {
                 getMacAddress = window.localStorage.getItem("getMacAddress");
             }
-            console.log(getMacAddress)
+        });
 
+        $(document).ready(function() {
             $("#aSignUp").click(function(e) {
                 e.preventDefault();
                 window.location.href = "register.html";
@@ -138,23 +116,26 @@
                 e.preventDefault();
 
                 if ($("#txtUsername").val() != "" && $("#txtUsername").val() != null && $("#txtUsername").val() != undefined && $("#txtPassword").val() != "" && $("#txtPassword").val() != null && $("#txtPassword").val() != undefined) {
-                    // $.post(apiUrl + "login", { "device_id": getMacAddress, "email": $("#txtUsername").val(), "password": $("#txtPassword").val() }, function (data) {
-                    //     if (data.status === true) {
-
-                    //     }
-                    //     else {
-                    //         alert(data.message);
-                    //     }
-                    // });
-
-                    // if ($("#txtUsername").val() == "bygoz" && $("#txtPassword").val() == "123456") {
-                        window.localStorage.setItem("isAuthenticate", "Yes");
-                        window.localStorage.setItem("UserID", $("#txtUsername").val());
-                        window.location.href = "main.html";
-                    // }
-                    // else {
-                    //     alert('Username or password are wrong.');
-                    // }
+                    $.post(apiUrl + "login", {
+                        "mac_id": getMacAddress,
+                        "email": $("#txtUsername").val(),
+                        "password": $("#txtPassword").val()
+                    }, function(data) {
+                        if (data.status === true) {
+                            window.localStorage.setItem("isAuthenticate", "Yes");
+                            window.localStorage.setItem("ApiToken", data.data.api_token);
+                            window.localStorage.setItem("UserID", data.data.id);
+                            window.localStorage.setItem("uUsername", data.data.username);
+                            window.localStorage.setItem("uEmail", data.data.email);
+                            window.localStorage.setItem("uName", data.data.name);
+                            window.localStorage.setItem("uMobile", data.data.contact_number);
+                            window.localStorage.setItem("uDOB", data.data.dob);
+                            window.localStorage.setItem("uState", data.data.state);
+                            window.location.href = "main.html";
+                        } else {
+                            alert(data.message);
+                        }
+                    });
                 } else {
                     alert('Please enter username and password.');
                 }
