--- a/sellwithus.html
+++ b/sellwithus.html
@@ -13,14 +13,6 @@
     <link href="THEME/plugins/animate-css/animate.css" rel="stylesheet" />
     <link href="THEME/css/style.css" rel="stylesheet">
     <link href="THEME/css/themes/all-themes.css" rel="stylesheet" />
-
-    <style>
-        .btnStore {
-            color: #03A9F4;
-            font-size: 20px;
-            padding: 3%;
-        }
-    </style>
 </head>
 
 <body class="theme-light-blue">
@@ -33,25 +25,25 @@
                     <div class="card">
                         <div class="body">
                             <div style="width: 100%;text-align: center;margin-bottom: 2em;border-bottom: 1px solid lightgray">
-                                    <h3 style="color: #03A9F4;">Sell With Us </h3>
+                                <h3 style="color: #03A9F4;">Sell With Us </h3>
                             </div>
                             <form class="form-horizontal">
                                 <div class="form-group">
                                     <label for="BrandName" class="col-sm-2 control-label">Brand Name *</label>
                                     <div class="col-sm-10">
                                         <div class="form-line">
-                                            <input type="text" class="form-control" id="BrandName" name="BrandName" placeholder="Brand name"  required="">
+                                            <input type="text" class="form-control" id="BrandName" name="BrandName" placeholder="Brand name" required="">
                                         </div>
                                     </div>
                                 </div>
                                 <div class="form-group">
-                                        <label for="FullName" class="col-sm-2 control-label">Full Name *</label>
-                                        <div class="col-sm-10">
-                                            <div class="form-line">
-                                                <input type="text" class="form-control" id="FullName" name="FullName" placeholder="Full name"  required="">
-                                            </div>
+                                    <label for="FullName" class="col-sm-2 control-label">Full Name *</label>
+                                    <div class="col-sm-10">
+                                        <div class="form-line">
+                                            <input type="text" class="form-control" id="FullName" name="FullName" placeholder="Full name" required="">
                                         </div>
                                     </div>
+                                </div>
                                 <div class="form-group">
                                     <label for="Website" class="col-sm-2 control-label">Website</label>
                                     <div class="col-sm-10">
@@ -61,21 +53,21 @@
                                     </div>
                                 </div>
                                 <div class="form-group">
-                                        <label for="Email" class="col-sm-2 control-label">Email *</label>
-                                        <div class="col-sm-10">
-                                            <div class="form-line">
-                                                <input type="text" class="form-control" id="Email" name="Email" placeholder="Email" required="">
-                                            </div>
+                                    <label for="Email" class="col-sm-2 control-label">Email *</label>
+                                    <div class="col-sm-10">
+                                        <div class="form-line">
+                                            <input type="text" class="form-control" id="Email" name="Email" placeholder="Email" required="">
                                         </div>
                                     </div>
-                                    <div class="form-group">
-                                            <label for="MobileNo" class="col-sm-2 control-label">Mobile No. *</label>
-                                            <div class="col-sm-10">
-                                                <div class="form-line">
-                                                    <input type="text" class="form-control" id="MobileNo" name="MobileNo" placeholder="Mobile No." required="">
-                                                </div>
-                                            </div>
+                                </div>
+                                <div class="form-group">
+                                    <label for="MobileNo" class="col-sm-2 control-label">Mobile No. *</label>
+                                    <div class="col-sm-10">
+                                        <div class="form-line">
+                                            <input type="text" class="form-control" id="MobileNo" name="MobileNo" placeholder="Mobile No." required="">
                                         </div>
+                                    </div>
+                                </div>
                                 <div class="form-group">
                                     <label for="InputAddress" class="col-sm-2 control-label">Address *</label>
 
@@ -84,7 +76,7 @@
                                             <textarea class="form-control" id="InputAddress" name="InputAddress" rows="4" placeholder="Address"></textarea>
                                         </div>
                                     </div>
-                                </div> 
+                                </div>
                                 <div class="form-group">
                                     <label for="InputComment" class="col-sm-2 control-label">Comment</label>
 
@@ -93,14 +85,14 @@
                                             <textarea class="form-control" id="InputComment" name="InputComment" rows="4" placeholder="Comment"></textarea>
                                         </div>
                                     </div>
-                                </div> 
+                                </div>
                                 <div class="form-group">
                                     <div class="col-sm-offset-2 col-sm-10">
-                                        <button type="button" onclick="formSubmit()" class="btn btn-danger">SUBMIT</button>
+                                        <button type="button" onclick="formSubmit()" class="btn btn-success">SUBMIT</button>
                                     </div>
                                 </div>
                             </form>
-                          </div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -122,9 +114,24 @@
     <script src="THEME/js/demo.js"></script>
     <script src="THEME/js/custom.js"></script>
 
-    <script> 
-        function formSubmit(){
-            
+    <script>
+        function formSubmit() {
+            var swuMetaData = {
+                "brand_name": $("#BrandName").val(),
+                "contact_name": $("#FullName").val(),
+                "website": $("#Website").val(),
+                "email": $("#Email").val(),
+                "mobile_no": $("#MobileNo").val(),
+                "address": $("#InputAddress").val(),
+                "comment": $("#InputComment").val()
+            }
+
+            $.post(apiUrl + "sell-with-us", swuMetaData, function(data) {
+                console.log(data)
+                if (data.status === true) {
+
+                }
+            });
         }
     </script>
 
