--- a/register.html
+++ b/register.html
@@ -103,7 +103,10 @@
 
             $("#btnRegister").click(function(e) {
                 e.preventDefault();
-
+                if($("#txtMobile").val() == "" || $("#txtEmail").val() == "" || $("#txtName").val() == "" || $("#txtCPassword").val() == "" || $("#txtUserName").val() == ""){
+                    alert("All fields are required.");
+                    return;
+                }
                 var userMetaData = {
                     "contact_number": $("#txtMobile").val(),
                     "email": $("#txtEmail").val(),
