Add View Player

--- a/booklist2.html
+++ b/booklist2.html
@@ -141,7 +141,7 @@
                 parent: currentWindow
             })
             win.setMenu(null);
-            win.loadFile('viewer.html')
+            win.loadFile('videoplayer.html')
         }
 
         function download(id) {
