--- a/viewer.html
+++ b/viewer.html
@@ -1,14 +1,25 @@
 <html>
 
 <head>
-    <script src='./public/lib/webviewer.min.js'></script>
-    <script src='./THEME/js/custom.js'></script>
+    <title></title>
 </head>
 
 <body style="margin: 0; padding: 0;">
     <div id='viewer'></div>
     <script>
+        if (typeof module === 'object') {
+            window.module = module;
+            module = undefined;
+        }
+    </script>
+    <script src="THEME/plugins/jquery/jquery.min.js"></script>
+    <script src='./public/lib/webviewer.min.js'></script>
+    <script src="THEME/js/custom.js"></script>
+    <script>
         require('./viewer.js');
+    </script>
+    <script>
+        if (window.module) module = window.module;
     </script>
 </body>
 
