--- a/checkout.html
+++ b/checkout.html
@@ -22,7 +22,9 @@
 
             <div class="row clearfix">
                 <div class="col-md-12">
+                    <div class="card">
 
+                    </div>
                 </div>
             </div>
 
